<resources>
    <!-- Application -->
    <string name="app_name">MovieApp</string>
    <!-- Toolbar -->
    <string name="toolbar_title_main" />
    <string name="toolbar_subtitle_main" />
    <string name="toolbar_subtitle_search">Search Result</string>
    <string name="toolbar_subtitle_movie">Movie</string>
    <string name="toolbar_subtitle_poster">Poster</string>
    <!-- Menu -->
    <string name="menu_item_search">Search</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_settings">Settings</string>
    <!-- Search Page -->
    <string name="search_page_label">Enter a movie name:</string>
    <string name="search_page_button">Search</string>
    <!-- Search Result / Movie Page / Poster Page -->
    <string name="movie_page_title_label">Title</string>
    <string name="movie_page_poster_label">Poster</string>
    <string name="movie_page_type_label">Type</string>
    <string name="movie_page_year_label">Year</string>
    <string name="movie_page_country_label">Country</string>
    <string name="movie_page_director_label">Director</string>
    <string name="movie_page_rating_label">Rating</string>
    <string name="movie_page_plot_label">Plot</string>
</resources>