<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_title_label" />

            <TextView
                android:id="@+id/tv_movie_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_type_label" />

            <TextView
                android:id="@+id/tv_movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_year_label" />

            <TextView
                android:id="@+id/tv_movie_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_country_label" />

            <TextView
                android:id="@+id/tv_movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_director_label" />

            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/movie_page_rating_label" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/movie_page_poster_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_movie_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/movie_page_plot_label" />

</LinearLayout>